--- a/act3.html
+++ b/act3.html
@@ -80,7 +80,7 @@
     <h2>Actividad de Refuerzo </h2>
     <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
                 <article>
-                    <br><iframe width="700" height="600" src='https://www.educaplay.com/es/recursoseducativos/2649026/html5/seguridad_informatica.htm#!' width='900' height='650' frameborder='0'></iframe><a> Organiza la Palabra </a>
+                    <br><iframe width="700" height="600" src='https://www.educaplay.com/es/recursoseducativos/2649097/html5/seguridad_imformatica.htm#!' width='900' height='650' frameborder='0'></iframe><a> Relaciona </a>
                 
       			</article>
     </section>
