--- a/multimedia.html
+++ b/multimedia.html
@@ -80,25 +80,9 @@
     <h2>Seguridad Informatica - UNAD ECBTI</h2>
     <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
                 <article>
-                    <figure>
-                        <img src="img/seguridad_inf.jpg" alt="Diseno">
-                  	</figure>
-                    <p>
-                      <!--INICIO: página principal del sitio, debe mostrar información general sobre el OVA, los objetivos del OVA, el curso y las temáticas al cual hace referencia y-->
-                        Esta pagina web fue diseñada explicitamente para adquirir el conocimiento necesario sobre HTML5 y CSS por medio de ejercicios de practica... teniendo en cuenta esto, se tomo como objeto de estudio el Curso 204039 referente a Seguridad Informática, cuya tematica hace referencia a los Fundamentos seguridad informática.<br><br>
 
-                        Objetivos ds Seguridad informatica.<br>
+                  <br><br><br><iframe width="680" height="420" src="https://www.youtube.com/embed/1emt4yreyII" frameborder="0" allowfullscreen></iframe>
 
-                        • Identificar amenazas de seguridad a las que se expone una red.<br>
-                        • Describir cada concepto de seguridad informática y definir el impacto que se tiene en la red al no tener un buen mecanismo de seguridad.<br>
-                        • Garantizar integridad, disponibilidad y privacidad de datos y recursos.<br><br>
-
-                        Objetivos OVA: <br>
-
-                        • Que el estudiante se fundamente teóricamente sobre las generalidades básicas del Diseño Web.<br>
-                        • Que el estudiante pueda utilizar de forma correcta los lenguajes HTML5 y CSS3 para aplicarlos en la solución de problemas de construcción de Sitios Web.<br>
-                        • Que el estudiante implemente servicios y sitios web a través de los sistemas gestores de contenidos CMS y LMS libres más usados en la actualidad.
-                    </p>
       			</article>
     </section>
     <aside> 
